[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Scaled/bricks2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Scaled/apple.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainScene.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Scaled/evil.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Scaled/snake.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Scaled/Button_Settings_pressed.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Scaled/Button_Pause_mini_pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Scaled/Button_Pause_mini.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Scaled/Button_Settings_mini.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/SwipeDetector.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=2]
0/name = "apple.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "snake.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 320, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "evil.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 320, 64 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 64, 64 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Bricks" type="Sprite" parent="."]
position = Vector2( 352, 640 )
texture = ExtResource( 1 )

[node name="Snake" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Pause" type="TextureButton" parent="."]
margin_left = 552.0
margin_top = 32.0
margin_right = 600.0
margin_bottom = 80.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="."]
margin_left = 624.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 80.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 6 )]

[node name="Pause2" parent="." instance=ExtResource( 11 )]
visible = false

[node name="SwipeDetector" parent="." instance=ExtResource( 12 )]

[connection signal="timeout" from="SnakeTick" to="." method="_on_SnakeTick_timeout"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="Continue" from="Pause2" to="." method="_on_Pause2_Continue"]
[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
